fix: adjust the layout for screen resolution on mobile devices

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -61,4 +61,11 @@ header {
       font-size: $fontSize;
     }
   }
+
+}
+
+@media (max-width:460px) {
+  header {
+    justify-content: center;
+  }
 }
