--- a/src/scss/input_field.scss
+++ b/src/scss/input_field.scss
@@ -8,7 +8,6 @@ $display: flex;
     form {
         width: 100%;
         display: $display;
-        justify-content: start;
         gap: 24px;
 
         input {
@@ -52,5 +51,12 @@ $display: flex;
         font-size: calc(16px + (20 - 16) * (100vw - 400px) / (1440 - 400));
         font-weight: 500;
         line-height: 24.38px;
+    }
+
+    @media (max-width:560px) {
+        form {
+            flex-wrap: wrap;
+            justify-content: center;
+        }
     }
 }
